docker-compose bug fix array

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,14 +14,14 @@ services:
     extends: base
     command: node services/email-mailgun-service.js
     environment:
-      MAILGUN_API_KEY=${MAILGUN_API_KEY}
-      MAILGUN_DOMAIN=${MAILGUN_DOMAIN}
+      - MAILGUN_API_KEY=${MAILGUN_API_KEY}
+      - MAILGUN_DOMAIN=${MAILGUN_DOMAIN}
 
   email-sendinblue-service:
     extends: base
     command: node services/email-sendinblue-service.js
     environment:
-      SENDINBLUE_V2_API_KEY=${SENDINBLUE_V2_API_KEY}
+      - SENDINBLUE_V2_API_KEY=${SENDINBLUE_V2_API_KEY}
 
   logger-service:
     extends: base
